Broken CSS Fix

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -3,7 +3,7 @@
     align-items: center;
     background: #ffffff;
     border-radius: 10px;
-    padding: 20px 30px 10px;
+    padding: 2%;
     border: 2px solid #093e61;
 }
 
@@ -37,6 +37,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#toggle-btn{
+    visibility: hidden;
+}
+.shifter-text{
+    margin: 2%;
+    color:#093e61; 
+    font-size:18px;
+
 }
 .toggle-label {
     position: relative;
